--- a/COVID_19_notebook.ipynb
+++ b/COVID_19_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1_cXqGggtIg1E6eVZsOI4YivjRGfNlKFg",
-      "authorship_tag": "ABX9TyNcyWwSSxc70l9i0XoWTGH3",
+      "authorship_tag": "ABX9TyNSOb/KGnyLOfCkdbTh750/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "source": [
+        "#import libraries"
+      ],
+      "metadata": {
+        "id": "P9FEcRqWmPZW"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
       "metadata": {
         "id": "rNflVjQhIOOa"
       },
@@ -40,13 +51,117 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DW9F6NzSmYPj"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#load datasets"
+      ],
+      "metadata": {
+        "id": "2M13J9Lama_-"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "covid_nig_data = pd.read_csv('/covidnig.csv')"
       ],
       "metadata": {
         "id": "qO9eJfbqIthk"
       },
-      "execution_count": 37,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "budget_data = pd.read_csv('/Budget data.csv')"
+      ],
+      "metadata": {
+        "id": "_nleVpsmmgcn"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "covid_external_data = pd.read_csv('/covid_external.csv')"
+      ],
+      "metadata": {
+        "id": "0SqKvgs-mwin"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "real_gdp_data = pd.read_csv('/RealGDP.csv')"
+      ],
+      "metadata": {
+        "id": "Mj6X1XVGnFeg"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8z7dJDCRnVSA"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#clean datasets"
+      ],
+      "metadata": {
+        "id": "xvXjRjhDnXXv"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "covid_nig_data.columns = ['States Affected', 'No. of Cases(Lab Confirmed)', 'No. of Cases(On Admission)', 'No. Discharged', 'No. of Deaths']"
+      ],
+      "metadata": {
+        "id": "SdL5_EZznbRU"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "covid_nig_data.fillna(0,inplace=True)"
+      ],
+      "metadata": {
+        "id": "wUD5FC8enywC"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XDg9iU8jn2hs"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +176,7 @@
         },
         "outputId": "fa05ab42-2ee5-4f0a-f76e-70c214acb60b"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +207,7 @@
       "metadata": {
         "id": "VWWI6EMOSyis"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +218,7 @@
       "metadata": {
         "id": "q3CiYjDqU8iq"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +229,7 @@
       "metadata": {
         "id": "NKHu2D3-Wu8n"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +240,7 @@
       "metadata": {
         "id": "3RDwSn7CWvcH"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +260,7 @@
       "metadata": {
         "id": "67TjkPUIYckk"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +275,7 @@
         "id": "v3bbJHm_YuR5",
         "outputId": "68614026-b6b3-47b8-8ef2-6e00a36618e0"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +298,7 @@
       "metadata": {
         "id": "aogKTs2SnktL"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +309,7 @@
       "metadata": {
         "id": "kvywbcuRoTX0"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +321,7 @@
       "metadata": {
         "id": "42toI5waovHR"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,7 +336,7 @@
         "id": "a6QOlz9FiERg",
         "outputId": "b6743d57-8df3-40f8-d6b8-05f2753acdc8"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +392,7 @@
       "metadata": {
         "id": "JVGRGTGZpahB"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +407,7 @@
         "id": "eufe6UqYsDw8",
         "outputId": "2343785a-23f1-4b01-9d54-cc9b8e8082b9"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +429,7 @@
       "metadata": {
         "id": "r6rSvj2isF14"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +440,7 @@
       "metadata": {
         "id": "lwAI4-7TsQeM"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +456,7 @@
         "id": "mp-AmlcXsgWR",
         "outputId": "98980489-a112-429e-bb53-269cd82b2b11"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +480,7 @@
         "id": "7pigjtDgszxO",
         "outputId": "4d5e2fc0-6ee3-4e3d-8209-296c2f6ff881"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +505,7 @@
       "metadata": {
         "id": "W_pYgPzWtBnj"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,7 +516,7 @@
       "metadata": {
         "id": "jxelLETatXiv"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -416,7 +531,7 @@
         "id": "FAcY1VehtzqO",
         "outputId": "2ea6f1b1-fd15-466f-d873-2b34a7775a45"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +554,7 @@
         "id": "tTIEm7Qxt0x2",
         "outputId": "564333eb-7fb2-4db6-a92d-ac625df2a77d"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +577,7 @@
         "id": "1cPlgGs3u2yz",
         "outputId": "a97cc26d-bfdd-4bdf-cd1a-df363e5fa82a"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +602,7 @@
         "id": "hg2D9zvVu38S",
         "outputId": "29a9e23f-04d7-4e7b-fb9d-d168ac5added"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1217,7 +1332,7 @@
         "id": "TFMqaytLwJDs",
         "outputId": "2332e23e-183a-43a7-89e8-eaf410f1b4e3"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1265,7 +1380,7 @@
         "id": "-p4AMfSewrbH",
         "outputId": "769afe77-7913-48cc-b48a-4d2ea5d0711f"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
