--- a/COVID_19_notebook.ipynb
+++ b/COVID_19_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1_cXqGggtIg1E6eVZsOI4YivjRGfNlKFg",
-      "authorship_tag": "ABX9TyPmqBNSG0F1BQNgNHo+JIcI",
+      "authorship_tag": "ABX9TyN9Gp1Xmi1aBkwVE9Q6+zz8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1361,7 +1361,18 @@
       "metadata": {
         "id": "-p4AMfSewrbH"
       },
-      "execution_count": 79,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#visualization"
+      ],
+      "metadata": {
+        "id": "3u4dJvPzYbe_"
+      },
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1385,7 +1396,7 @@
           "height": 170
         }
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
