--- a/COVID_19_notebook.ipynb
+++ b/COVID_19_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1_cXqGggtIg1E6eVZsOI4YivjRGfNlKFg",
-      "authorship_tag": "ABX9TyN9Gp1Xmi1aBkwVE9Q6+zz8",
+      "authorship_tag": "ABX9TyNhU4FmU+Jm6HkaK5HzW42d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,12 +35,12 @@
       "metadata": {
         "id": "P9FEcRqWmPZW"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "rNflVjQhIOOa"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "DW9F6NzSmYPj"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "2M13J9Lama_-"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "qO9eJfbqIthk"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "_nleVpsmmgcn"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "0SqKvgs-mwin"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "Mj6X1XVGnFeg"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "8z7dJDCRnVSA"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "xvXjRjhDnXXv"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -141,18 +141,18 @@
       "metadata": {
         "id": "SdL5_EZznbRU"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "covid_nig_data.fillna(0,inplace=True)"
+        "covid_nig_data = covid_nig_data.fillna(0)"
       ],
       "metadata": {
         "id": "wUD5FC8enywC"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -163,18 +163,18 @@
       "metadata": {
         "id": "XDg9iU8jn2hs"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "budget_data.fillna(0,inplace=True)"
+        "budget_data = budget_data.fillna(0)"
       ],
       "metadata": {
         "id": "9ytkPhPFpTCF"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -185,18 +185,18 @@
       "metadata": {
         "id": "56LMVDM3pg_A"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "covid_external_data.fillna(0,inplace=True)"
+        "covid_external_data = covid_external_data.fillna(0)"
       ],
       "metadata": {
         "id": "1XQMrWe4pk1p"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -207,18 +207,18 @@
       "metadata": {
         "id": "74TSMt1ZpwGW"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "real_gdp_data.fillna(0,inplace=True)"
+        "real_gdp_data = real_gdp_data.fillna(0)"
       ],
       "metadata": {
         "id": "ySJKeUt-qDHT"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -228,12 +228,12 @@
       ],
       "metadata": {
         "id": "Zl27Eb5PqQRP",
-        "outputId": "81d99ccc-253e-4a02-e51c-1d5889a04232",
+        "outputId": "f4de9016-8967-4dbe-b1eb-78470d309dd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "VWWI6EMOSyis"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -275,7 +275,7 @@
       "metadata": {
         "id": "q3CiYjDqU8iq"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
       "metadata": {
         "id": "NKHu2D3-Wu8n"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
       "metadata": {
         "id": "3RDwSn7CWvcH"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "9J_aZ6mzXsZH"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -317,7 +317,7 @@
       "metadata": {
         "id": "67TjkPUIYckk"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -330,9 +330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v3bbJHm_YuR5",
-        "outputId": "3f80ceef-703a-4de6-dfce-df81dc6c53d6"
+        "outputId": "16f2149b-04b0-4378-8514-f91a7bf87a4f"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +357,7 @@
       "metadata": {
         "id": "aogKTs2SnktL"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -368,7 +368,7 @@
       "metadata": {
         "id": "kvywbcuRoTX0"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "42toI5waovHR"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -391,7 +391,7 @@
       "metadata": {
         "id": "JVGRGTGZpahB"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -404,9 +404,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eufe6UqYsDw8",
-        "outputId": "a5d2f5fa-9f4b-4ec9-932f-1be13da2f827"
+        "outputId": "8f6f6b5d-ca3b-4299-d7c7-419579f85db4"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +428,7 @@
       "metadata": {
         "id": "r6rSvj2isF14"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
       "metadata": {
         "id": "lwAI4-7TsQeM"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -453,9 +453,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mp-AmlcXsgWR",
-        "outputId": "42b758b4-bbe0-4114-ac48-b173488ec409"
+        "outputId": "0053f176-d586-4d66-f7c0-fed1c81c323b"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,32 +469,14 @@
     {
       "cell_type": "code",
       "source": [
-        "covid_nig_data['No. Discharged'].fillna(0, inplace=True)\n",
+        "covid_nig_data['No. Discharged'] = covid_nig_data['No. Discharged'].fillna(0)\n",
         "total_recoveries = covid_nig_data['No. Discharged'].sum()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7pigjtDgszxO",
-        "outputId": "b94a6aaf-e26e-45fb-85fa-ba521359bb69"
+        "id": "7pigjtDgszxO"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-58-376f0e771f87>:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  covid_nig_data['No. Discharged'].fillna(0, inplace=True)\n"
-          ]
-        }
-      ]
+      "execution_count": 44,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -504,7 +486,7 @@
       "metadata": {
         "id": "W_pYgPzWtBnj"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1361,7 +1343,7 @@
       "metadata": {
         "id": "-p4AMfSewrbH"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1372,7 +1354,7 @@
       "metadata": {
         "id": "3u4dJvPzYbe_"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
